* Land mines can now be sometimes defused if you levitate over and pick them up.
* Willpower now protects against some hostile magic.
* Add autopick regex.
* An option to show info about gods now remembers the god's last reaction to prayer.
* Some items now have descriptions, accessed by 'F1' command.
* Better help for crafting actions.
* Prepare help for config options.
* Add alternate door traps.
* Prevent very dumb creatures from using wands.
* You cannot unequip locked chastity belt.

Fixes:
* Decos no longer lets you steal from him.
* You can no longer leave the Black Market through walls.
* Display Willpower in wizard mode secrets.
* Running in wilderness now correctly takes stamina.
* Add day/night cycle to all above-ground locations.
* Enable weather effects for more above-ground locations.
* Fix some quest messages not being saved as already displayed.
* Reveal gas traps when you step on them.
* Fix several places where panic immunity or disease immunity was not respected.
* Fix several crafting bugs, hopefully preventing crashes.
* Fix Terra not offering priestly services after you killed Lobh-se.
* Spill more water over a burning player when they pray to Silva, so there's
  a better chance to be extinguished.
* Prevent long strings in config options from overflowing when displayed.
* Prevent building features in owned rooms.
* Explosive liquids can no longer be used to douse flames.
* Wands of webbing were not causing hostility.
* Fix horns of fear causing panic without checking the panic level of the victim.
* Remove redundant messages from auto map notes.
* Let monsters also benefit from Detecting status effect.
* Fix sitting on fountains and drinking from non-water fountains.
* Fix AI not using equipped zappable items.
* Make taming/possessing more powerful creatures scale correctly.

Aslona:
* A new main quest will see you trying to bring peace back to the kingdom of
  Aslona, currently in the middle of a civil war.
* Add five new locations.