@@ -249,6 +249,7 @@ struct characterdatabase : public databasebase
   truth GhostCopyMaterials;
   truth CanBeGeneratedOnlyInTheCatacombs;
   truth IsAlcoholic;
+  truth IsUndead;
   truth IsImmuneToWhipOfThievery;
   fearray<int> AllowedDungeons;
 };
@@ -627,6 +628,7 @@ class character : public entity, public id
   DATA_BASE_TRUTH(GhostCopyMaterials);
   DATA_BASE_TRUTH(CanBeGeneratedOnlyInTheCatacombs);
   DATA_BASE_TRUTH(IsAlcoholic);
+  DATA_BASE_TRUTH(IsUndead);
   DATA_BASE_TRUTH(IsImmuneToWhipOfThievery);
   DATA_BASE_VALUE(const fearray<int>&, AllowedDungeons);
   int GetType() const { return GetProtoType()->GetIndex(); }
@@ -1188,6 +1190,7 @@ class character : public entity, public id
   truth TryToStealFromShop(character*, item*);
   int GetMyVomitMaterial() { return MyVomitMaterial; }
   void SetNewVomitMaterial(int What) { MyVomitMaterial = What; }
+  festring GetHitPointDescription() const;
  protected:
   static truth DamageTypeDestroysBodyPart(int);
   virtual void LoadSquaresUnder();
